[tool.poetry]
name = "codestatus"
version = "0.1.0"
description = ""
authors = ["purofle <purofle@gmail.com>"]
license = "AGP-L3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
