[tool.poetry]
name = "codestatus"
version = "0.1.0"
description = ""
authors = ["purofle <purofle@gmail.com>"]
license = "AGP-L3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
babel = "^2.12.1"
rich = "^13.3.1"
aiohttp = "^3.8.4"
pydantic = "^1.10.5"

[tool.poetry.scripts]
codestatus = "codestatus.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
